@@ -916,6 +916,10 @@ void mag_assign_spells(void)
 	TAR_CHAR_ROOM, FALSE, MAG_MANUAL,
 	NULL);
 
+  spello(SPELL_IDENTIFY, "identify", 50, 25, 5, POS_STANDING,
+        TAR_CHAR_ROOM | TAR_OBJ_INV | TAR_OBJ_ROOM, FALSE, MAG_MANUAL,
+        NULL);
+
 
   /* NON-castable spells should appear below here. */
   spello(SPELL_IDENTIFY, "identify", 0, 0, 0, 0,
